Move utils to a new Base library. This was done because we wanted to implement a class for version numbers, but it wouldn't have made sense to do so in the map library.

--- a/Base/CMakeLists.txt
+++ b/Base/CMakeLists.txt
@@ -1,10 +1,7 @@
-PROJECT(Map)
+PROJECT(Base)
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)
 
-set (PROJECT_INCLUDE_DIR
-  ${PROJECT_SOURCE_DIR}/include
-  ${PROJECT_SOURCE_DIR}/../Base/include
-)
+set (PROJECT_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
 set (PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
 
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
@@ -12,15 +9,15 @@ INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
 INCLUDE(../dependencies.cmake)
 
 # Sources:
-SET(Map_library_SRCS
-  ${PROJECT_SOURCE_DIR}/Area.cpp
+SET(Base_library_SRCS
+  ${PROJECT_SOURCE_DIR}/utils.cpp
 )
 
 INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR})
 INCLUDE_DIRECTORIES(${PROJECT_INCLUDE_DIR})
 
 # actual target:
-ADD_LIBRARY(${PROJECT_NAME} STATIC ${Map_library_SRCS})
+ADD_LIBRARY(${PROJECT_NAME} STATIC ${Base_library_SRCS})
 
 # add install target:
-INSTALL(TARGETS Map DESTINATION lib)
+INSTALL(TARGETS Base DESTINATION lib)
