Add first series of tests with version numbers

--- a/Base/CMakeLists.txt
+++ b/Base/CMakeLists.txt
@@ -11,6 +11,7 @@ INCLUDE(../dependencies.cmake)
 # Sources:
 SET(Base_library_SRCS
   ${PROJECT_SOURCE_DIR}/utils.cpp
+  ${PROJECT_SOURCE_DIR}/Version.cpp
 )
 
 INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR})
