--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "RakNet"]
 	path = RakNet
 	url = https://github.com/nagakawa/RakNet.git
+[submodule "argon2"]
+	path = argon2
+	url = https://github.com/P-H-C/phc-winner-argon2.git
