Add ability to add users for testing purposes.
Now to implement server-side salting, which involves unique salts.

--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -34,6 +34,7 @@ TARGET_LINK_LIBRARIES(Test
   ${ZLIB_LIBRARIES}
   ${SQLITE_LIBRARIES}
   ${Boost_LIBRARIES}
+  ${LIBPTHREAD_LIBRARIES}
 )
 
 #ADD_CUSTOM_COMMAND(
