Some more work with RakNet (start handling packets)

--- a/Game/CMakeLists.txt
+++ b/Game/CMakeLists.txt
@@ -24,6 +24,7 @@ SET(Game_library_SRCS
   ${PROJECT_SOURCE_DIR}/Database.cpp
   ${PROJECT_SOURCE_DIR}/sha1.cpp
   ${PROJECT_SOURCE_DIR}/Credentials.cpp
+  ${PROJECT_SOURCE_DIR}/packet.cpp
 )
 
 include_directories(${PROJECT_BINARY_DIR})
