Add client window

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "argon2"]
 	path = argon2
 	url = https://github.com/P-H-C/phc-winner-argon2.git
+[submodule "tdr"]
+	path = tdr
+	url = https://github.com/nagakawa/tdr
