--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,10 @@ OPTION(RAKNET_ENABLE_SAMPLES "" FALSE)
 OPTION(RAKNET_GENERATE_INCLUDE_ONLY_DIR "" TRUE)
 ADD_SUBDIRECTORY(RakNet)
 
+# TDR (AGL)
+
+ADD_SUBDIRECTORY(tdr)
+
 # Our own submodules
 
 ADD_SUBDIRECTORY(Base)
