--- a/Game/CMakeLists.txt
+++ b/Game/CMakeLists.txt
@@ -25,6 +25,7 @@ SET(Game_library_SRCS
   ${PROJECT_SOURCE_DIR}/sha1.cpp
   ${PROJECT_SOURCE_DIR}/Credentials.cpp
   ${PROJECT_SOURCE_DIR}/packet.cpp
+  ${PROJECT_SOURCE_DIR}/ClientWindow.cpp
 )
 
 include_directories(${PROJECT_BINARY_DIR})
