Add imgui as a dependency. Even if this isn't used for the actual GUI code for the game, it can still be used in resource editors, debug tools, etc.

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "tdr"]
 	path = tdr
 	url = https://github.com/nagakawa/tdr
+[submodule "imgui"]
+	path = imgui
+	url = https://github.com/nagakawa/imgui
