--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,10 @@ OPTION(RAKNET_ENABLE_SAMPLES "" FALSE)
 OPTION(RAKNET_GENERATE_INCLUDE_ONLY_DIR "" TRUE)
 ADD_SUBDIRECTORY(RakNet)
 
+# dear imgui (AGC's fork)
+
+ADD_SUBDIRECTORY(imgui)
+
 # TDR (AGL)
 
 ADD_SUBDIRECTORY(tdr)
