Add circular queue implementation.
This will be used for latency compensation for movement.

--- a/Base/CMakeLists.txt
+++ b/Base/CMakeLists.txt
@@ -12,6 +12,7 @@ INCLUDE(../dependencies.cmake)
 SET(Base_library_SRCS
   ${PROJECT_SOURCE_DIR}/utils.cpp
   ${PROJECT_SOURCE_DIR}/Version.cpp
+  ${PROJECT_SOURCE_DIR}/CircularQueue.cpp
 )
 
 INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR})
