Use SHA-256 instead of SHA-1.
Not only is SHA-1 itself insecure, the implementation used was also
insecure.

--- a/Game/CMakeLists.txt
+++ b/Game/CMakeLists.txt
@@ -22,7 +22,7 @@ SET(Game_library_SRCS
   ${PROJECT_SOURCE_DIR}/GameState.cpp
   ${PROJECT_SOURCE_DIR}/Player.cpp
   ${PROJECT_SOURCE_DIR}/Database.cpp
-  ${PROJECT_SOURCE_DIR}/sha1.cpp
+  ${PROJECT_SOURCE_DIR}/sha2.c
   ${PROJECT_SOURCE_DIR}/Credentials.cpp
   ${PROJECT_SOURCE_DIR}/packet.cpp
   ${PROJECT_SOURCE_DIR}/window/ClientWindow.cpp
