--- a/Game/CMakeLists.txt
+++ b/Game/CMakeLists.txt
@@ -25,6 +25,7 @@ SET(Game_library_SRCS
   ${PROJECT_SOURCE_DIR}/sha2.c
   ${PROJECT_SOURCE_DIR}/Credentials.cpp
   ${PROJECT_SOURCE_DIR}/packet.cpp
+  ${PROJECT_SOURCE_DIR}/Location.cpp
   ${PROJECT_SOURCE_DIR}/window/ClientWindow.cpp
   ${PROJECT_SOURCE_DIR}/window/ChatWindow.cpp
 )
