--- a/x801/CMakeLists.txt
+++ b/x801/CMakeLists.txt
@@ -17,6 +17,7 @@ include_directories(${PROJECT_INCLUDE_DIR})
 ADD_EXECUTABLE(x801 ${x801_executable_SRCS})
 
 ADD_DEPENDENCIES(x801 Argon2)
+ADD_DEPENDENCIES(x801 Assets)
 
 TARGET_LINK_LIBRARIES(x801
   ${PROJECT_SOURCE_DIR}/../build/libGame.a
