--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,10 @@
     "unordered_map": "cpp",
     "*h*h*h*h*h*h*h*hpp*hpp*hpp*hpp*hpp*hpp*hpp*hpp*hpp*hpp*hpp*hpp*hppunordered_set": "cpp",
     "unordered_set": "cpp",
-    "*hpp*hpp*hpp*hppshared_mutex": "cpp"
+    "*hpp*hpp*hpp*hppshared_mutex": "cpp",
+    "*h*h*h*h*h*h*h*h*h*h*h*h*h*h*h*h*h*h*cpp*h*h*h*h*c*c*c*c*c*h*h*hpp*h*c*c*h*c*c*h*h*h*h*h*h*h*h*h*h*h*h*h*h*h*h*h*h*h*h*h*h*h*h*h*h*h*h*h*h*h*h*h*h*h*h*c*c*c*c*h*h*h*h*h*h*h*h*h*hpparray": "cpp",
+    "array": "cpp",
+    "*c*c*hpp*c*c*c*c*c*c*c*cpprandom": "cpp",
+    "random": "cpp"
   }
 }
