Add PortAudio and Vorbis as dependencies

--- a/x801/CMakeLists.txt
+++ b/x801/CMakeLists.txt
@@ -35,6 +35,8 @@ TARGET_LINK_LIBRARIES(x801
   ${OPENGL_LIBRARIES}
   ${GLEW_LIBRARIES}
   ${SOIL_LIBRARY}
+  ${PORTAUDIO_LIBRARIES}
+  ${VORBIS_LIBRARIES}
   # ${GOBJECT_LIBRARIES}
   # ${GLIB_LIBRARIES}
 )
