Reduce how often glfwWindowShouldClose is called in client

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,5 +31,6 @@
     "array": "cpp",
     "*c*c*hpp*c*c*c*c*c*c*c*cpprandom": "cpp",
     "random": "cpp"
-  }
+  },
+  "python.linting.pylintEnabled": false
 }
