Offload file service to an HTTP server. Actually getting files will be done next.

--- a/x801/CMakeLists.txt
+++ b/x801/CMakeLists.txt
@@ -37,6 +37,7 @@ TARGET_LINK_LIBRARIES(x801
   ${SOIL_LIBRARY}
   ${PORTAUDIO_LIBRARIES}
   ${VORBIS_LIBRARIES}
+  ${CURL_LIBRARIES}
   # ${GOBJECT_LIBRARIES}
   # ${GLIB_LIBRARIES}
 )
