--- a/Game/CMakeLists.txt
+++ b/Game/CMakeLists.txt
@@ -10,6 +10,7 @@ SET(PROJECT_INCLUDE_DIR
   ${PROJECT_SOURCE_DIR}/../Base/include
   ${PROJECT_SOURCE_DIR}/../Map/include
   ${PROJECT_SOURCE_DIR}/../argon2/include
+  ${PROJECT_SOURCE_DIR}/../tdr/AGL/include
 )
 
 SET(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
@@ -29,6 +30,7 @@ SET(Game_library_SRCS
   ${PROJECT_SOURCE_DIR}/window/ClientWindow.cpp
   ${PROJECT_SOURCE_DIR}/window/ChatWindow.cpp
   ${PROJECT_SOURCE_DIR}/window/Patcher.cpp
+  ${PROJECT_SOURCE_DIR}/window/patcher_views/TextureView.cpp
 )
 
 include_directories(${PROJECT_BINARY_DIR})
