--- a/Map/CMakeLists.txt
+++ b/Map/CMakeLists.txt
@@ -16,6 +16,7 @@ SET(Map_library_SRCS
   ${PROJECT_SOURCE_DIR}/Chunk.cpp
   ${PROJECT_SOURCE_DIR}/Area.cpp
   ${PROJECT_SOURCE_DIR}/TileSec.cpp
+  ${PROJECT_SOURCE_DIR}/Model.cpp
 )
 
 INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR})
