Add client config.
It's called config.json because C is for client and S (settings.json)
is for server.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,7 +43,11 @@
     "deque": "cpp",
     "list": "cpp",
     "vector": "cpp",
-    "slist": "cpp"
+    "slist": "cpp",
+    "functional": "cpp",
+    "tuple": "cpp",
+    "utility": "cpp",
+    "system_error": "cpp"
   },
   "python.linting.pylintEnabled": false
 }
