--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ addons:
   apt:
     sources:
       - sourceline: "deb http://ftp.us.debian.org/debian unstable main"
+      - ubuntu-toolchain-r-test
     packages:
       - libglfw3-dev
       - libglew-dev
@@ -34,3 +35,4 @@ addons:
       - libvorbis-dev
       - cmake
       - python3-pip
+      - g++-6
