--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: cpp
 sudo: enabled
-dist: trusty
+dist: precise
 before_install:
   - pip3 install numpy simpleeval
   - chmod +x install-dependencies.sh
