--- a/Map/CMakeLists.txt
+++ b/Map/CMakeLists.txt
@@ -17,6 +17,7 @@ SET(Map_library_SRCS
   ${PROJECT_SOURCE_DIR}/Area.cpp
   ${PROJECT_SOURCE_DIR}/TileSec.cpp
   ${PROJECT_SOURCE_DIR}/Model.cpp
+  ${PROJECT_SOURCE_DIR}/EntityModel.cpp
 )
 
 INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR})
