Create x801::game::Entity (represents an entity in the game, duh)

--- a/Game/CMakeLists.txt
+++ b/Game/CMakeLists.txt
@@ -34,6 +34,7 @@ SET(Game_library_SRCS
   ${PROJECT_SOURCE_DIR}/window/Axes.cpp
   ${PROJECT_SOURCE_DIR}/window/Launcher.cpp
   ${PROJECT_SOURCE_DIR}/window/imgui_hooks.cpp
+  ${PROJECT_SOURCE_DIR}/window/entity_rendering/Entity.cpp
   ${PROJECT_SOURCE_DIR}/window/patcher_views/TextureView.cpp
   ${PROJECT_SOURCE_DIR}/window/patcher_views/ModelView.cpp
   ${PROJECT_SOURCE_DIR}/window/patcher_views/MapView.cpp
