--- a/Game/CMakeLists.txt
+++ b/Game/CMakeLists.txt
@@ -27,6 +27,7 @@ SET(Game_library_SRCS
   ${PROJECT_SOURCE_DIR}/Credentials.cpp
   ${PROJECT_SOURCE_DIR}/packet.cpp
   ${PROJECT_SOURCE_DIR}/Location.cpp
+  ${PROJECT_SOURCE_DIR}/sizelimit.cpp
   ${PROJECT_SOURCE_DIR}/window/ClientWindow.cpp
   ${PROJECT_SOURCE_DIR}/window/ChatWindow.cpp
   ${PROJECT_SOURCE_DIR}/window/TerrainRenderer.cpp
@@ -35,6 +36,8 @@ SET(Game_library_SRCS
   ${PROJECT_SOURCE_DIR}/window/Launcher.cpp
   ${PROJECT_SOURCE_DIR}/window/imgui_hooks.cpp
   ${PROJECT_SOURCE_DIR}/window/entity_rendering/Entity.cpp
+  ${PROJECT_SOURCE_DIR}/window/entity_rendering/EntityRenderer.cpp
+  ${PROJECT_SOURCE_DIR}/window/entity_rendering/Atlas.cpp
   ${PROJECT_SOURCE_DIR}/window/patcher_views/TextureView.cpp
   ${PROJECT_SOURCE_DIR}/window/patcher_views/ModelView.cpp
   ${PROJECT_SOURCE_DIR}/window/patcher_views/MapView.cpp
