--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,7 +50,26 @@
     "system_error": "cpp",
     "bitset": "cpp",
     "string_view": "cpp",
-    "valarray": "cpp"
+    "valarray": "cpp",
+    "atomic": "cpp",
+    "chrono": "cpp",
+    "codecvt": "cpp",
+    "condition_variable": "cpp",
+    "iosfwd": "cpp",
+    "limits": "cpp",
+    "memory": "cpp",
+    "mutex": "cpp",
+    "ratio": "cpp",
+    "stdexcept": "cpp",
+    "complex": "cpp",
+    "fstream": "cpp",
+    "future": "cpp",
+    "iomanip": "cpp",
+    "istream": "cpp",
+    "optional": "cpp",
+    "ostream": "cpp",
+    "sstream": "cpp",
+    "streambuf": "cpp"
   },
   "python.linting.pylintEnabled": false
 }
