--- a/Map/CMakeLists.txt
+++ b/Map/CMakeLists.txt
@@ -19,6 +19,7 @@ SET(Map_library_SRCS
   ${PROJECT_SOURCE_DIR}/Model.cpp
   ${PROJECT_SOURCE_DIR}/EntityModel.cpp
   ${PROJECT_SOURCE_DIR}/Atlas.cpp
+  ${PROJECT_SOURCE_DIR}/XDatSec.cpp
 )
 
 INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR})
