Make autostitch.py recognise images of arbitrary width
This will be used for allowing the program to work with
spritesheets.
Please note that all constituent images must have a height of at
most 32. If you want to pack arbitrary images, then please use
samantha.py.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -71,5 +71,6 @@
     "sstream": "cpp",
     "streambuf": "cpp"
   },
-  "python.linting.pylintEnabled": false
+  "python.linting.pylintEnabled": false,
+  "python.formatting.provider": "autopep8"
 }
