--- a/Game/CMakeLists.txt
+++ b/Game/CMakeLists.txt
@@ -40,6 +40,7 @@ SET(Game_library_SRCS
   ${PROJECT_SOURCE_DIR}/window/entity_rendering/EntityManager.cpp
   ${PROJECT_SOURCE_DIR}/window/entity_rendering/EntityRenderer.cpp
   ${PROJECT_SOURCE_DIR}/window/entity_rendering/Atlas.cpp
+  ${PROJECT_SOURCE_DIR}/window/entity_rendering/OverheadName.cpp
   ${PROJECT_SOURCE_DIR}/window/patcher_views/TextureView.cpp
   ${PROJECT_SOURCE_DIR}/window/patcher_views/ModelView.cpp
   ${PROJECT_SOURCE_DIR}/window/patcher_views/MapView.cpp
