Start work on combat system

--- a/Game/CMakeLists.txt
+++ b/Game/CMakeLists.txt
@@ -46,6 +46,9 @@ SET(Game_library_SRCS
   ${PROJECT_SOURCE_DIR}/window/patcher_views/MapView.cpp
   ${PROJECT_SOURCE_DIR}/window/patcher_views/PartView.cpp
   ${PROJECT_SOURCE_DIR}/window/patcher_views/BlueprintView.cpp
+  ${PROJECT_SOURCE_DIR}/combat/Battle.cpp
+  ${PROJECT_SOURCE_DIR}/combat/Stats.cpp
+  ${PROJECT_SOURCE_DIR}/combat/School.cpp
 )
 
 include_directories(${PROJECT_BINARY_DIR})
