--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -37,6 +37,7 @@ TARGET_LINK_LIBRARIES(Test
   ${SQLITE_LIBRARIES}
   ${Boost_LIBRARIES}
   ${LIBPTHREAD_LIBRARIES}
+  ${GMP_LIBRARIES}
 )
 
 #ADD_CUSTOM_COMMAND(
