--- a/x801/CMakeLists.txt
+++ b/x801/CMakeLists.txt
@@ -39,6 +39,7 @@ TARGET_LINK_LIBRARIES(x801
   ${PORTAUDIO_LIBRARIES}
   ${VORBIS_LIBRARIES}
   ${CURL_LIBRARIES}
+  ${GMP_LIBRARIES}
   # ${GOBJECT_LIBRARIES}
   # ${GLIB_LIBRARIES}
 )
