Fix build errors due to FindGLFW finding a static version of lib
Fuck my life...

--- a/x801/CMakeLists.txt
+++ b/x801/CMakeLists.txt
@@ -32,7 +32,7 @@ TARGET_LINK_LIBRARIES(x801
   ${LIBPTHREAD_LIBRARIES}
   ${Boost_LIBRARIES}
   ${SQLITE_LIBRARIES}
-  ${GLFW_LIBRARY_RELEASE}
+  ${GLFW_LIBRARIES}
   ${OPENGL_LIBRARIES}
   ${GLEW_LIBRARIES}
   ${SOIL_LIBRARY}
