--- a/Map/CMakeLists.txt
+++ b/Map/CMakeLists.txt
@@ -21,6 +21,7 @@ SET(Map_library_SRCS
   ${PROJECT_SOURCE_DIR}/Atlas.cpp
   ${PROJECT_SOURCE_DIR}/XDatSec.cpp
   ${PROJECT_SOURCE_DIR}/POISec.cpp
+  ${PROJECT_SOURCE_DIR}/PathSec.cpp
 )
 
 INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR})
