--- a/Map/CMakeLists.txt
+++ b/Map/CMakeLists.txt
@@ -13,6 +13,7 @@ INCLUDE(../dependencies.cmake)
 
 # Sources:
 SET(Map_library_SRCS
+  ${PROJECT_SOURCE_DIR}/mapErrors.cpp
   ${PROJECT_SOURCE_DIR}/Chunk.cpp
   ${PROJECT_SOURCE_DIR}/Area.cpp
   ${PROJECT_SOURCE_DIR}/TileSec.cpp
