Initial implementation of MobInfo

--- a/Game/CMakeLists.txt
+++ b/Game/CMakeLists.txt
@@ -51,6 +51,7 @@ SET(Game_library_SRCS
   ${PROJECT_SOURCE_DIR}/combat/School.cpp
   ${PROJECT_SOURCE_DIR}/combat/mob/Mob.cpp
   ${PROJECT_SOURCE_DIR}/combat/mob/MobManager.cpp
+  ${PROJECT_SOURCE_DIR}/combat/mob/MobInfo.cpp
 )
 
 include_directories(${PROJECT_BINARY_DIR})
